kassandra-tester/tests/snapshots/scylla__simple_batch_data.snap
---
source: kassandra-tester/tests/scylla.rs
expression: kassandra.data_snapshot()
---
test:
  tables:
    t1:
      rows:
        - partition_key: key
          clustering_key: ~
          data:
            key: key
            value: value
    t2:
      rows:
        - partition_key: key
          clustering_key: ~
          data:
            key: key
            value: value
